# recipebox

./: db.sqlite3  pyproject.toml
hello_django/: settings.py  urls.py
homepage/: .gitignore  admin.py  forms.py  models.py  views.py
homepage/migrations/: 0001_initial.py  0002_auto_20200806_1927.py  0002_profile.py
homepage/templates/: author_detail.html  fav_recipes.html  genericform.html  index.html  navbar.html  post_detail.html
